# VideoTranslatorAI

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  install_windows.bat  pyproject.toml  requirements-core.txt  requirements-dev.txt  requirements-gpu-cu124.txt  requirements-optional.txt  requirements-wav2lip.txt  requirements.txt  setup_windows.bat  uninstall_windows.bat  video_translator.py  video_translator_gui.py
.claude/: next_session_note.md
.github/workflows/: tests.yml
assets/: make_icon.py
docs/: ACTION_PLAN.md  ARCHITECTURE_PREVIEW.md  COSYVOICE_INSTALL.md
tests/: test_audio_assembly.py  test_audio_mix.py  test_audio_stretch.py  test_cli_smoke.py  test_config.py  test_cosyvoice_engine.py  test_cosyvoice_runtime.py  test_difficulty_detector.py  test_difficulty_profile.py  test_document_context.py  test_e2e_lite.py  test_edge_tts_engine.py  test_face_detector.py  test_heavy_smoke.py  test_hotwords.py  test_input_source.py  test_jobs_pipeline.py  test_js_runtime.py  test_legacy_bridges.py  test_lipsync.py  test_media.py  test_metrics_csv.py  test_ollama_budget.py  test_ollama_cove.py  test_ollama_length_control.py  test_ollama_model_selector.py  test_ollama_prompt_context.py  test_ollama_strip_preamble.py  test_output_media.py  test_packaging.py  test_pipeline_runner.py  test_platforms.py  test_preflight.py  test_quality_flags.py  test_requirements_static.py  test_secrets.py  test_segments.py  test_segments_expand.py  test_segments_repair.py  test_subprocess_utils.py  (+10 more)
videotranslator/: __init__.py  __main__.py  audio_assembly.py  audio_mix.py  audio_stretch.py  cli.py  config.py  cosyvoice_engine.py  cosyvoice_runtime.py  difficulty_detector.py  difficulty_profile.py  document_context.py  edge_tts_engine.py  face_detector.py  hotwords.py  input_source.py  jobs.py  js_runtime.py  lipsync.py  media.py  metrics_csv.py  ollama_cove.py  ollama_length_control.py  ollama_model_selector.py  ollama_prompt.py  ollama_runtime.py  output_media.py  pipeline.py  pipeline_runner.py  platforms.py  preflight.py  quality_flags.py  secrets.py  segments.py  subprocess_utils.py  timing.py  transcription.py  translation.py  tts_audio.py  tts_reference.py  (+4 more)
