[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videotranslatorai"
dynamic = ["version"]
description = "Local AI video dubbing and translation tool with GUI and CLI workflows."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { file = "LICENSE" }
authors = [
  { name = "VideoTranslatorAI contributors" }
]
keywords = [
  "video-translation",
  "dubbing",
  "whisper",
  "tts",
  "ollama",
  "wav2lip",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Multimedia :: Video",
]
dependencies = [
  "faster-whisper",
  "yt-dlp",
  "demucs",
  "soundfile",
  "edge-tts",
  "deep-translator",
  "requests",
  "pydub",
  "pyloudnorm",
  "torchcodec",
  "numpy>=2.0,<2.4",
  "audioop-lts; python_version >= '3.13'",
]

[project.optional-dependencies]
optional = [
  "coqui-tts>=0.27.5",
  "transformers>=4.40.0,<5.1",
  "sentencepiece>=0.2.0",
  "sacremoses>=0.1.1",
  "pyannote.audio>=3.1,<4.0",
  "silero-vad",
  "keyring",
]
wav2lip = [
  "dlib",
  "facexlib",
  "new-basicsr",
]
gpu-cu124 = [
  "torch>=2.6.0,<2.8",
  "torchaudio==2.6.0",
  "torchvision==0.21.0",
]
dev = [
  "opencv-python-headless",
  "numpy>=2.0,<2.4",
  "soundfile",
]

[project.scripts]
videotranslatorai = "videotranslator.cli:main"
videotranslator-ai = "videotranslator.cli:main"
video-translator-ai = "videotranslator.cli:main"

[project.gui-scripts]
videotranslatorai-gui = "videotranslator.cli:main"
videotranslator-ai-gui = "videotranslator.cli:main"

[project.urls]
Homepage = "https://github.com/HeartB1t/VideoTranslatorAI"
Repository = "https://github.com/HeartB1t/VideoTranslatorAI"
Issues = "https://github.com/HeartB1t/VideoTranslatorAI/issues"

[tool.setuptools]
py-modules = ["video_translator_gui"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["videotranslator*"]

[tool.setuptools.dynamic]
version = { attr = "videotranslator.__version__" }
